After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684037 - keyboard: Fix gtk+ module getting set to ibus for xkb sources
keyboard: Fix gtk+ module getting set to ibus for xkb sources
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2012-09-14 16:49 UTC by Rui Matos
Modified: 2012-09-14 17:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
keyboard: Fix gtk+ module getting set to ibus for xkb sources (1.33 KB, patch)
2012-09-14 16:49 UTC, Rui Matos
none Details | Review
keyboard: Fix gtk+ IM module getting set to ibus for xkb sources (1.57 KB, patch)
2012-09-14 17:47 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2012-09-14 16:49:52 UTC
Patch attached.
Comment 1 Rui Matos 2012-09-14 16:49:54 UTC
Created attachment 224349 [details] [review]
keyboard: Fix gtk+ module getting set to ibus for xkb sources

We can't re-use set_ibus_engine() when setting the xkb engine because
that will unconditionally set the gtk+ module to ibus on finish.
Comment 2 Matthias Clasen 2012-09-14 17:14:27 UTC
Don't you always have to update the gtk module setting to keep it in sync with the engine setting ? (ibus for ibus engines, simple for xkb layouts).

I think you probably want to pass the engine_id along and look at it in set_ibus_engine_finish() to decide which gtk module to activate.
Comment 3 Rui Matos 2012-09-14 17:47:53 UTC
Created attachment 224353 [details] [review]
keyboard: Fix gtk+ IM module getting set to ibus for xkb sources

Instead of waiting until the async ibus engine set call to finish to
set the gtk+ IM module to 'ibus' we can just set the module
unconditionally. The user visible effect is the same, i.e. the user
will have to change to another input source because the current one
isn't working right and it simplifies the code.
Comment 4 Matthias Clasen 2012-09-14 17:52:01 UTC
Review of attachment 224353 [details] [review]:

Looks good to me
Comment 5 Rui Matos 2012-09-14 17:55:02 UTC
Attachment 224353 [details] pushed as 4433ec8 - keyboard: Fix gtk+ IM module getting set to ibus for xkb sources